SyndiShanX/user.css
/* ... */
.r6zw1NLBxpB2YWcQQkUn, .r6zw1NLBxpB2YWcQQkUn:focus, .xbsDt2_VfIDs0cQOXvgf:after, .main-navBar-navBarItem .GlueDropTarget--active:after, .Mvo56wLT_lMG_re9vA7W:after,
.v1Gs5xaHy8aBhUMEobSn:after {
	border-color: #35AFEA!important;
	color: #35AFEA!important;
}
.encore-bright-accent-set, .r6zw1NLBxpB2YWcQQkUn:after, .WuHfzknUICVJtLZJU_30, .PJuB4n2TjjZFBiWAW2zx, .control-button--active-dot:after,
.main-playButton-PlayButton.main-playButton-primary, .r6zw1NLBxpB2YWcQQkUn:focus:after, input:checked:hover:not([disabled]):not(:active)~.x-toggle-indicatorWrapper {
	background-color: #35AFEA!important;
}
.main-rootlist-dropIndicator, .main-rootlist-rootlistItem.oPcAu3pJOaYgzzVOjJqt:before, .main-rootlist-rootlistItem.EAJQIRtPUCq6sn2ioXpl:after,
.main-trackList-trackListRow.main-trackList-dropTargetBefore:before, .main-trackList-trackListRow.main-trackList-dropTargetAfter:after, .aCwCCeV0KAq6w4Zzf7oE {
	background: #35AFEA!important;
}
.main-progressRing-circleColor {
	stroke: #35AFEA!important;
}
.novF8wEdTg7z80q3Ykws .qYsWmMXU2vS2COWabAU3, .control-button--active {
	fill: #35AFEA!important;
}
.encore-dark-theme .encore-bright-accent-set, .encore-dark-theme .encore-positive-set {
	--background-base: #35AFEA;
	--background-highlight: #35AFEA;
	--background-elevated-base: #35AFEA;
	--background-elevated-highlight: #35AFEA;
	--background-elevated-press: #35AFEA;
	--background-tinted-base: #35AFEA;
	--background-tinted-highlight: #35AFEA;
	--background-tinted-press: #35AFEA;
	--background-unsafe-for-small-text-base: #35AFEA;
	--background-unsafe-for-small-text-highlight: #35AFEA;
	--background-unsafe-for-small-text-press: #35AFEA;
	--decorative-subdued: #35AFEA;
	--text-bright-accent: #35AFEA;
	--text-positive: #35AFEA;
	--essential-bright-accent: #35AFEA;
	--essential-positive: #35AFEA;
	--is-active-fg-color: #35AFEA;
}

/* User Dropdown */
.main-userWidget-dropDownMenu {
	position: relative!important;
	right: 150px!important;
}

/* Notification Bubble */
.main-notificationBubble-NotificationBubble {
	background-color: var(--blue)!important;
}
.main-notificationBubble-NotificationBubble::after {
	border-bottom-color: var(--blue)!important;
}

/* Text */
.K8PtC1Way9XetxDGwCGx, .FjQhMth1iFGBpR5rKmk4, .GenericModal div, .gC5rpi1l_CHdGc8OYjSt, .main-button-tertiary {
	color: #fff!important;
}

/* Now Playing */
.main-nowPlayingBar-container {
	min-height: 125px!important;
}
.main-nowPlayingBar-nowPlayingBar {
	margin-top: 20px!important;
}
.playback-bar .playback-progressbar {
	min-width: 950px!important;
}
.playback-bar .playback-progressbar, .playback-bar__progress-time-elapsed, .main-playbackBarRemainingTime-container {
	position: relative!important;
	left: -235px!important;
}
.control-button-heart {
	position: relative!important;
	bottom: 10px!important;
}

/* Now Playing Cover Art */
.main-nowPlayingWidget-coverArt, .cover-art .shadow, .cover-art-image {
	width: 112px!important;
	height: 112px!important;
}
.cover-art--with-auto-height .cover-art-image {
	width: 240px!important;
	height: 240px!important;
	top: 24px!important;
}
.main-nowPlayingWidget-coverExpanded .main-nowPlayingWidget-coverArt {
	display: none!important;
}
.main-nowPlayingWidget-coverExpanded .main-trackInfo-container, .main-nowPlayingWidget-coverExpanded .control-button-heart {
	position: relative!important;
	left: 80px!important;
}
.CoverSlotExpanded__actionButton {
	position: relative!important;
	left: 205px!important;
	top: -205px!important;
}

